--- a/public/package.json
+++ b/public/package.json
@@ -4,7 +4,7 @@
   "description": "Generate nice maps based on Strava input",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/braadworst/stravamap#readme",
   "devDependencies": {
     "firebase": "^9.6.5",
-    "uhtml": "^2.8.0"
+    "uhtml": "^2.8.0",
+    "vite": "^3.1.3"
   }
 }
