updated to the latest cloud functinos

--- a/public/package.json
+++ b/public/package.json
@@ -4,7 +4,8 @@
   "description": "Generate nice maps based on Strava input",
   "main": "index.js",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "stop": "lsof -t -i :9099 -i :4000 -i :8080 -i :5001 -i :8081 -i :9000 -i :5000 -i :8085 -i :9199 | xargs kill -9"
   },
   "repository": {
     "type": "git",
